--- a/nhahang/src/main/java/UII/MainFrame.form
+++ b/nhahang/src/main/java/UII/MainFrame.form
@@ -285,7 +285,7 @@
                                               <Group type="102" attributes="0">
                                                   <Component id="txt_qlnv_thongbao" min="-2" pref="320" max="-2" attributes="0"/>
                                                   <EmptySpace max="-2" attributes="0"/>
-                                                  <Component id="btn_qlnv_suattnv" min="-2" pref="115" max="-2" attributes="0"/>
+                                                  <Component id="btn_qlnv_suatknv" min="-2" pref="115" max="-2" attributes="0"/>
                                                   <EmptySpace max="-2" attributes="0"/>
                                                   <Component id="btn_qlnv_dangkytknv" min="-2" max="-2" attributes="0"/>
                                               </Group>
@@ -357,7 +357,7 @@
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="btn_qlnv_suattnv" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btn_qlnv_suatknv" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="txt_qlnv_thongbao" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="btn_qlnv_dangkytknv" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
@@ -369,12 +369,12 @@
                         </DimensionLayout>
                       </Layout>
                       <SubComponents>
-                        <Component class="javax.swing.JButton" name="btn_qlnv_suattnv">
+                        <Component class="javax.swing.JButton" name="btn_qlnv_suatknv">
                           <Properties>
                             <Property name="text" type="java.lang.String" value="S&#x1eed;a th&#xf4;ng tin"/>
                           </Properties>
                           <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_qlnv_suattnvActionPerformed"/>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_qlnv_suatknvActionPerformed"/>
                           </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="btn_qlnv_dangkytknv">
@@ -470,6 +470,9 @@
                                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                                 </Property>
                               </Properties>
+                              <Events>
+                                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="table_qlnvMouseClicked"/>
+                              </Events>
                             </Component>
                           </SubComponents>
                         </Container>
