--- a/nhahang/src/main/java/UII/MainFrame.form
+++ b/nhahang/src/main/java/UII/MainFrame.form
@@ -419,13 +419,15 @@
                                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                                   <Component id="txt_qlnv_thongbao" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="btn_qlnv_suatknv" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="btn_qlnv_dangkytknv" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="btn_qlnv_xoatrang" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                                           <Component id="txt_qlnv_tim" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="btn_qlnv_timkhtheosdt" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="103" groupAlignment="3" attributes="0">
+                                          <Component id="btn_qlnv_suatknv" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="btn_qlnv_dangkytknv" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="btn_qlnv_xoatrang" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace pref="15" max="32767" attributes="0"/>
@@ -913,7 +915,6 @@
                                     </Column>
                                   </TableColumnModel>
                                 </Property>
-                                <Property name="columnSelectionAllowed" type="boolean" value="false"/>
                                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                                   <Color id="Default Cursor"/>
                                 </Property>
