--- a/nhahang/src/main/java/UII/MainFrame.form
+++ b/nhahang/src/main/java/UII/MainFrame.form
@@ -164,6 +164,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txt_dangnhap_taikhoan">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_dangnhap_taikhoanActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btn_dangnhap_dangnhap">
               <Properties>
