--- a/nhahang/src/main/java/UII/MainFrame.form
+++ b/nhahang/src/main/java/UII/MainFrame.form
@@ -997,7 +997,7 @@
                                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                                       </Group>
                                                   </Group>
-                                                  <Component id="txt_qlban_maban1" min="-2" pref="117" max="-2" attributes="0"/>
+                                                  <Component id="txt_qlban_soluongnguoi" min="-2" pref="117" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="txt_qlban_thongbao" min="-2" pref="217" max="-2" attributes="0"/>
@@ -1027,7 +1027,7 @@
                                       <Component id="jLabel19" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="txt_qlban_maban" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel22" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="txt_qlban_maban1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txt_qlban_soluongnguoi" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
@@ -1090,7 +1090,7 @@
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                                   <Table columnCount="3" rowCount="4">
                                     <Column editable="true" title="M&#xe3; B&#xe0;n" type="java.lang.Object"/>
-                                    <Column editable="true" title="M&#xe3; Khu" type="java.lang.Object"/>
+                                    <Column editable="true" title="S&#x1ed1; L&#x1b0;&#x1ee3;ng Ng&#x1b0;&#x1edd;i" type="java.lang.Object"/>
                                     <Column editable="true" title="Tr&#x1ea1;ng Th&#xe1;i" type="java.lang.Object"/>
                                   </Table>
                                 </Property>
@@ -1121,9 +1121,6 @@
                           </SubComponents>
                         </Container>
                         <Component class="javax.swing.JTextField" name="txt_qlban_maban">
-                          <Properties>
-                            <Property name="enabled" type="boolean" value="false"/>
-                          </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_qlban_mabanActionPerformed"/>
                           </Events>
@@ -1178,9 +1175,9 @@
                             <Property name="text" type="java.lang.String" value="S&#x1ed1; l&#x1b0;&#x1ee3;ng ng&#x1b0;&#x1edd;i:"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JTextField" name="txt_qlban_maban1">
+                        <Component class="javax.swing.JTextField" name="txt_qlban_soluongnguoi">
                           <Events>
-                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_qlban_maban1ActionPerformed"/>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txt_qlban_soluongnguoiActionPerformed"/>
                           </Events>
                         </Component>
                       </SubComponents>
